--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PLAID_PRODUCTS=auth, transactions, identity
 PLAID_COUNTRY_CODES=US, CA
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY=BszNayef9kWbgpoPthV1ydEi3KTgzwlMSt7RvQNIgSErdDd0zf
+DWOLLA_SECRET=LkbRTmSXqsFjWce9VTPio0t4EIL95LJsnxIWQ8A8B8cBmQR6qR
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
